fix issue of button on safari

--- a/shopee/assets/css/main.css
+++ b/shopee/assets/css/main.css
@@ -368,6 +368,10 @@
    display: none;
 }
 
+.header__category-mobile-icon {
+   float: left;
+}
+
 .header__mobile-search {
    padding: 0 12px;
 }
